apply plugin: 'java'

group 'org.rognan'
version '2.0.0'

targetCompatibility = '12'
sourceCompatibility = '12'

ext {
  moduleName = 'org.rognan.jlink'
  moduleLaunchPoint = 'org.rognan.Application'
}

jar {
  manifest {
    attributes 'Main-Class': 'org.rognan.Application'
  }
}

task jlink(type: Exec, dependsOn: ['clean', 'jar']) {
  def javaHome = System.properties.'java.home'

  workingDir 'build'

  commandLine "${javaHome}/bin/jlink", '--module-path', "libs${File.pathSeparatorChar}${javaHome}/jmods",
    '--strip-debug', '--no-header-files', '--no-man-pages', '--compress', '2',
    '--add-modules', "${moduleName}",
    '--launcher', "launch=${moduleName}/${moduleLaunchPoint}",
    '--output', 'dist'
}
